LUCENE-8778: Don't use Java 11 APIs on 8x branch.